[build-system]
requires = [
    "setuptools", 
    "cython",
]
build-backend = "setuptools.build_meta"

[project]
name = "ABPy"
version = "0.1.0"
requires-python = ">= 3.8"
classifiers = ["Private :: No Not Upload"]

[tool.setuptools]
package-dir = {"" = "."}
ext-modules = [
    {name = "ABPy.abp", sources = ["./bindings/abp.pyx"]},
]
