[build-system]
requires = [
    "setuptools", 
    "cython",
]
build-backend = "setuptools.build_meta"

[project]
name = "ABPy"
version = "0.1.0"
requires-python = ">= 3.8"
classifiers = ["Private :: No Not Upload"]

[tool.setuptools]
package-dir = {"" = "."}
ext-modules = [
    {name = "ABPy.lattice", sources = ["./bindings/lattice.pyx"]},
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["ABPy/tests"]
python_files = "test_*.py"
python_functions = "test_*"
